$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-04-15 [D] Added developer documentation that explains packaging {GauGau}
2010-04-19 [C] Fixed typos in docs/*/script.js (thread ID 64510) {eenemeenemuu}
2010-04-15 [D] Added details to docs about translation {GauGau}
2010-04-15 [D] Added admin tools and administration section for Dutch documentation section (user contribution) {GauGau}
2010-04-15 [C] Fixed version count issue in install.php (thread ID 64566) {GauGau}
2010-04-15 [D] Added indentation and "to top" links on config page {GauGau}
2010-04-15 [C] Added correct default value for ImageMagick path to reflect check for traling slash {GauGau}
2010-04-15 [C] Corrected improper German translation {GauGau}
2010-04-11 [A] Added partial Slovenian translation (user contribution) {GauGau}
2010-04-11 [D] Added section about adding language files to dev-only section of documentation {GauGau}
2010-04-10 [A] Added partial Arabic translation (user contribution) {GauGau}
2010-04-09 [D] Added clarification about quota to docs {GauGau}
2010-04-08 [C] Changed label of submit button for user creation (thread ID 64423) {GauGau}
2010-04-07 [D] Added credits for Dutch language contributions {GauGau}
2010-04-07 [D] Added partial Dutch translation of documentation (user contribution) {GauGau}
2010-04-07 [M] Added code so that debug messages of swfupload flash uploader is shown in debug output {Abbas}
2010-04-01 [C] Added number of views to file details if detailed hit statistics are enabled (thread ID 63440) {eenemeenemuu}
2010-04-01 [C] Added class 'buttonlist' to all core themes {eenemeenemuu}